--- a/str_easy.cbp
+++ b/str_easy.cbp
@@ -35,13 +35,16 @@
 		<Unit filename="itc_count_char_in_str.cpp" />
 		<Unit filename="itc_equal_reverse.cpp" />
 		<Unit filename="itc_even_place.cpp" />
+		<Unit filename="itc_find_str.cpp" />
 		<Unit filename="itc_first_end_three.cpp" />
 		<Unit filename="itc_hello_str.cpp" />
 		<Unit filename="itc_len.cpp" />
+		<Unit filename="itc_max_char_on_end.cpp" />
 		<Unit filename="itc_percent_lower_uppercase.cpp" />
 		<Unit filename="itc_print_copy_str.cpp" />
 		<Unit filename="itc_reverse_str.cpp" />
 		<Unit filename="itc_slice_str.cpp" />
+		<Unit filename="itc_three_str.cpp" />
 		<Unit filename="main.cpp" />
 		<Unit filename="str_easy.h" />
 		<Extensions>
